crates/php-parser/tests/snapshots/integration__switch_missing_expr.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php switch { }

=== errors ===
expected '(', found '{'
expected expression
unclosed '')'' opened at Span { start: 13, end: 14 }
expected '{', found end of file
expected '}', found end of file
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Switch": {
          "expr": {
            "kind": {
              "ArrayAccess": {
                "array": {
                  "kind": "Error",
                  "span": {
                    "start": 13,
                    "end": 14
                  }
                },
                "index": null
              }
            },
            "span": {
              "start": 13,
              "end": 17
            }
          },
          "cases": []
        }
      },
      "span": {
        "start": 6,
        "end": 17
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 17
  }
}
